<?xml version="1.0"?>
<package>
  <name>simple_2wd_control_arduino</name>
  <version>0.0.0</version>
  <description>The simple_2wd_control_arduino package</description>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>simple_arduino_control_msgs</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>simple_arduino_control_msgs</run_depend>
  
  <export>
  </export>
</package>